<feature> Change navbar behavior when collapsing. Fixed page max-width to 1000px and center all page content when width>1000px

--- a/src/styles.css
+++ b/src/styles.css
@@ -68,6 +68,7 @@ p, label{
 }
 
 .main-container{
+	max-width: 1000px;
 	margin-top: 40px;
 }
 
@@ -159,6 +160,24 @@ p, label{
   	width: 80%;
 }
 
+@media screen and (max-width: 992px){
+	.nav-link{
+		font-size: 16px;
+	}
+}
+
+@media screen and (max-width: 882px){
+	.nav-link{
+		font-size: 14px;
+	}
+}
+
+@media screen and (max-width: 800px){
+	.nav-link{
+		font-size: 13px;
+	}
+}
+
 .navbar-dark .navbar-nav .active>.nav-link{
 	color:#224e34c9;
 }
@@ -168,8 +187,16 @@ p, label{
 	padding: 2px;
 }
 
-@media screen and (max-width: 991px){
+@media screen and (max-width: 992px){
 	.lenguageIcons{
+		margin-top: 0px;
+		margin-left: 20px;
+	}
+}
+
+@media screen and (max-width: 764px){
+	.lenguageIcons{
+		text-align: left;
 		margin-top: 20px;
 		margin-left: 20px;
 	}
@@ -185,7 +212,7 @@ p, label{
     transition: 0.5s all ease;
 }
 
-@media screen and (max-width: 991px){
+@media screen and (max-width: 992px){
 	.flagIcon{
 		width: 25px;
 		height: 22px;
@@ -195,6 +222,10 @@ p, label{
 .flagIcon:hover{
 	transform: scale(1.3);
     transition: 0.5s all ease;
+}
+
+.navbar.navbar-fixed-top .navbar-collapse {
+  text-align: center;
 }
 
 /* -------------------- END NAVBAR ITEM STYLES ------------------------------ */
